<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="warning">Are you sure you want to do this?</string>
    <string name="show_answer">Show Answer</string>
    <string name="cheat">Cheat!</string>
    <string name="judgment">Cheating is wrong</string>

    //Questions
    <string name="question_oceans">The Pacific Ocean is large than the Atlantic Ocean</string>
    <string name="question_midwest">The Suez Canal connect the Red Sea to the Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="question_australia">Canberra is the capital of Australia</string>
</resources>
